# programming-tasks

./: .gitignore  .gitignore.swp  LICENSE  README.md  mehr.c  new  rechenoperation.c
Kernel_stuff/Labor_2_modules/: tst.c
Labor/: a5  l1_a4.c  l1_a5.c  l1_a6.c
Labor/Labor1/: a4  l1_a4.c
Labor/Labor2/: a2  a5  l2_a2.c  l2_a4.c  l2_a5.c  tst
Labor/Labor3/: a1  a3  a5  a6  a7  l3_a1.c  l3_a4.c  l3_a5.c
Labor/Labor4/: a10  a7  l4_a10.c  l4_a11.c  l4_a6.c  l4_a9.c  test.c  tst
Labor/Labor5/: a2  (+5 more)
Labor_cpp/: a1  a10.cpp  a11.cpp  a12.cpp  a15.cpp  a16.cpp  a17.cpp  a18.cpp  a19.cpp  a2  a2.cpp  a20.cpp  a21.cpp  a22.cpp  a23.cpp  a24.cpp  a3  a3.cpp  a4.cpp  a5  a5.cpp  a6  a6.cpp  a7.cpp  a8.cpp  a9.cpp  hugo  hugo.cpp  rock_paper_scissor.cpp  test.cpp  testi.cpp
Labor_cpp/a14/: CMakeLists.txt  CMakePresets.json  Employee.cpp  Employee.cppm  Manager.cpp  Manager.cppm  Worker.cpp  Worker.cppm  empl  main.cpp  problems.txt  work
Labor_cpp/a14/gcm.cache/: module-mapper.json
Pgm2/: a0  a0.cpp  cal  car_inv.cpp  cr  first  first.cpp  gu  guess.cpp  library.cpp  library2.cpp  phonebook_doc.txt  pl  play.cpp  st
Programmieren/: 2d  2dp.c  Brüche.c  First  First.c  Observation  a.out  append.c  autotyp.c  br  cp  cp.c  daten  datencovert.c  dy  dyn  dyna.c  dynarr.c  einmal  einmaleins.c  fac  faculty.c  fcap  findcap.c  first  firtsif.c  fläche  flächekreis.c  if  inc  increment.c  ipo  ipot.c  itp  itpot.c  kalender.c  kl2  kl2.c  kl4  kla4.c  (+47 more)
Python/: ok.py  test.py
Scripts/: kok.sh  listen_ports.sh  psuser.sh  template.sh  template.txt  test2.sh  testport.sh
(+182 files in other folders)
